@@ -19,7 +19,7 @@
     <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
       <head>
         <title><xsl:value-of select="$TitleName" /></title>
-        <meta http-equiv="x-ua-compatible" content="IE=Edge" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta charset="UTF-8" />
         <xsl:call-template name="Chummer5CSS" />
 <!-- ** Override default style type definitions ** -->
